--- a/css/main.css
+++ b/css/main.css
@@ -1319,3 +1319,17 @@ body {
   -webkit-animation-play-state: paused !important;
           animation-play-state: paused !important;
 }/*# sourceMappingURL=main.css.map */
+.message-container {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.message-text {
+  font-size: 24px;
+  color: #fff;
+  font-family: 'Arial', sans-serif;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px 20px;
+  border-radius: 10px;
+}
